Minimize build flags